Images preload to prevent flickering

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,12 @@ body {
   font-size:16px;
 }
 
+/* images preload */
+body::after {
+  content: url("/images/cards/card1b.jpg") url("/images/cards/card2b.jpg") url("/images/cards/card3b.jpg") url("/images/cards/card4b.jpg");
+  display: none; 
+}
+
 h1,h2,h3,h4,h5,h6 {
   font-family: var(--font-oswald);    
 }
@@ -131,3 +137,4 @@ h1 {
   width: 206px;
   height: 284px;
 } 
+
